--- a/public/index.html
+++ b/public/index.html
@@ -113,8 +113,8 @@
 
   <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <script src="../js/charts.js"></script>
-  <script src="../js/menu.js"></script>
+  <script src="../src/js/charts.js"></script>
+  <script src="../src/js/menu.js"></script>
 
 </body>
 </html>
