--- a/public/treino.html
+++ b/public/treino.html
@@ -40,6 +40,6 @@
     </ul>
   </nav>
 
-  <script type="module" src="../js/treinoApp.js"></script>
+  <script type="module" src="../src/js/treinoApp.js"></script>
 </body>
 </html>
