--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <title>Dashboard - FitApp</title>
 
   <!-- Tailwind compilado -->
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body class="min-h-screen pb-24 p-5 space-y-6 bg-zinc-950 text-white">
@@ -113,8 +113,8 @@
 
   <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <script src="../src/js/charts.js"></script>
-  <script src="../src/js/menu.js"></script>
+  <script src="./js/charts.js"></script>
+  <script src="./js/menu.js"></script>
 
 </body>
 </html>
