--- a/public/perfil.html
+++ b/public/perfil.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Perfil — FitApp</title>
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 <body class="min-h-screen pb-24 bg-zinc-950 text-white">
 
@@ -35,7 +35,7 @@
   </nav>
 
   <script type="module">
-    import { save, load, formatDateKey } from '../js/utils.js';
+    import { save, load, formatDateKey } from './js/utils.js';
     const key = 'fitapp:medidas';
     const form = document.getElementById('medForm');
     const pesoInput = document.getElementById('peso');
