--- a/public/treino.html
+++ b/public/treino.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Treino — FitApp</title>
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 <body class="min-h-screen pb-24 bg-zinc-950 text-white">
 
@@ -40,6 +40,6 @@
     </ul>
   </nav>
 
-  <script type="module" src="../src/js/treinoApp.js"></script>
+  <script type="module" src="./js/treinoApp.js"></script>
 </body>
 </html>
