--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <title>Dashboard - FitApp</title>
 
   <!-- Tailwind compilado -->
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./style.css">
 </head>
 
 <body class="min-h-screen pb-24 p-5 space-y-6 bg-zinc-950 text-white">
