--- a/public/perfil.html
+++ b/public/perfil.html
@@ -25,12 +25,33 @@
     <div id="history" class="space-y-2"></div>
   </main>
 
+<!-- menu -->
   <nav class="fixed bottom-0 left-0 w-full bg-zinc-900 border-t border-zinc-800">
     <ul class="flex justify-around py-3 text-zinc-400">
-      <li><a href="./index.html">🏠</a></li>
-      <li><a href="./treino.html">🔥</a></li>
-      <li><a href="./exercicios.html">💪</a></li>
-      <li><a href="./perfil.html" class="text-white">👤</a></li>
+      <li class="flex flex-col items-center">
+        <a href="./index.html" class="flex flex-col items-center">
+          <span class="text-xl">🏠</span>
+          <span class="text-xs mt-1">Home</span>
+        </a>
+      </li>
+      <li class="flex flex-col items-center">
+        <a href="./treino.html" class="flex flex-col items-center text-white">
+          <span class="text-xl">🔥</span>
+          <span class="text-xs mt-1">Treinos</span>
+        </a>
+      </li>
+      <li class="flex flex-col items-center">
+        <a href="./exercicios.html" class="flex flex-col items-center">
+          <span class="text-xl">💪</span>
+          <span class="text-xs mt-1">Exercícios</span>
+        </a>
+      </li>
+      <li class="flex flex-col items-center">
+        <a href="./perfil.html" class="flex flex-col items-center">
+          <span class="text-xl">👤</span>
+          <span class="text-xs mt-1">Perfil</span>
+        </a>
+      </li>
     </ul>
   </nav>
 
