--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 
-<body class="min-h-screen pb-24 p-5 space-y-6 bg-zinc-950 text-white">
+<body class="min-h-screen pb-24 bg-zinc-950 text-white">
 
   <!-- Header -->
   <header class="flex items-center justify-between mb-4">
@@ -30,7 +30,7 @@
 
     <div class="bg-zinc-900 p-5 rounded-2xl border border-zinc-800 hover:border-zinc-700 transition">
       <p class="text-zinc-400">Treino da Semana</p>
-      <h2 class="text-3xl font-bold mt-1">4</h2>
+      <h2 class="text-3xl font-bold mt-1">5</h2>
     </div>
 
     <div class="bg-zinc-900 p-5 rounded-2xl border border-zinc-800 hover:border-zinc-700 transition">
@@ -76,38 +76,33 @@
   </section>
 
 
-  <!-- MENU INFERIOR -->
+ <!-- menu -->
   <nav class="fixed bottom-0 left-0 w-full bg-zinc-900 border-t border-zinc-800">
     <ul class="flex justify-around py-3 text-zinc-400">
-
       <li class="flex flex-col items-center">
         <a href="./index.html" class="flex flex-col items-center">
           <span class="text-xl">🏠</span>
-          <span class="text-xs mt-1 text-zinc-100">Home</span>
+          <span class="text-xs mt-1">Home</span>
         </a>
       </li>
-
       <li class="flex flex-col items-center">
-        <a href="./treino.html" class="flex flex-col items-center">
+        <a href="./treino.html" class="flex flex-col items-center text-white">
           <span class="text-xl">🔥</span>
           <span class="text-xs mt-1">Treinos</span>
         </a>
       </li>
-
       <li class="flex flex-col items-center">
         <a href="./exercicios.html" class="flex flex-col items-center">
           <span class="text-xl">💪</span>
           <span class="text-xs mt-1">Exercícios</span>
         </a>
       </li>
-
       <li class="flex flex-col items-center">
         <a href="./perfil.html" class="flex flex-col items-center">
           <span class="text-xl">👤</span>
           <span class="text-xs mt-1">Perfil</span>
         </a>
       </li>
-
     </ul>
   </nav>
 
